Fix non-wrapped message text

--- a/tgui/packages/tgui/styles/interfaces/TicketManager.scss
+++ b/tgui/packages/tgui/styles/interfaces/TicketManager.scss
@@ -82,6 +82,7 @@
   }
 
   &__Content span {
+    word-wrap: break-word;
     vertical-align: middle;
   }
 
